--- a/SafeGuard/app/src/main/AndroidManifest.xml
+++ b/SafeGuard/app/src/main/AndroidManifest.xml
@@ -35,9 +35,9 @@
     <!--suppress AndroidDomInspection -->
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.SafeGuard"
         android:targetSdkVersion="34">
